--- a/style.css
+++ b/style.css
@@ -46,6 +46,21 @@ p{
 }
 
 .container { width: 700px; margin: 40px auto }
+@media (max-width: 960px) {
+  .container {
+    width: 700px;
+  }
+}
+@media (max-width: 720px) {
+  .container {
+    width: 500px;
+  }
+}
+@media (max-width: 540px) {
+  .container {
+    width: 300px;
+  }
+}
 .card-white { background: white;padding: 60px;margin: 20px;box-shadow: 0px 10px 30px rgba(0,0,0,0.1);border-radius: 6px; text-align : center;}
 .list-horizontal { 
 list-style: none;
